[project]
name = "dbt-timescaledb"
dynamic = ["version"]
description = "The TimescaleDB adapter plugin for dbt"
authors = [
    {name = "Sam Debruyn", email = "dbt.sam@debruyn.dev"},
]
dependencies = [
    "dbt-postgres~=1.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "dbt/adapters/timescaledb/__version__.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.4",
]

[tool.pdm]
plugins = [
    "sync-pre-commit-lock"
]

[tool.ruff]
line-length = 110
select = ["E", "F", "B", "W", "I", "PL"]
target-version = "py311"
