[project]
name = "dbt-timescaledb"
dynamic = ["version"]
description = "The TimescaleDB adapter plugin for dbt"
authors = [
    {name = "Sam Debruyn", email = "dbt.sam@debruyn.dev"},
]
dependencies = [
    "dbt-postgres~=1.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["dbt", "timescaledb"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Repository = "https://github.com/sdebruyn/dbt-timescaledb"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.build]
includes = ["dbt/"]

[tool.pdm.version]
source = "scm"
write_to = "dbt/adapters/timescaledb/__version__.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.4",
    "pytest>=7.4.3",
    "dbt-tests-adapter>=1.7.1",
    "pytest-xdist>=3.3.1",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 110
select = ["E", "F", "B", "W", "I", "PL", "ANN"]
ignore = ["PLR2004", "ANN101"]
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "empty: the relation in this test should be empty"
]
