[project]
name = "dbt-timescaledb"
dynamic = ["version"]
description = "The TimescaleDB adapter plugin for dbt"
authors = [
    {name = "Sam Debruyn", email = "dbt.sam@debruyn.dev"},
]
dependencies = [
    "dbt-postgres>=1.8.0b1",
    "dbt-adapters>=1.0.0b1",
    "dbt-common>=1.0.0b1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["dbt", "timescaledb"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://dbt-timescaledb.debruyn.dev"
Repository = "https://github.com/sdebruyn/dbt-timescaledb"
Documentation = "https://dbt-timescaledb.debruyn.dev/usage/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.build]
includes = ["dbt/"]

[tool.pdm.version]
source = "scm"
write_to = "dbt/adapters/timescaledb/__version__.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.4",
]
test = [
    "pytest>=7.4.3",
    "dbt-tests-adapter>=1.8.0b1",
    "pytest-xdist[psutil]>=3.4.0",
    "pytest-cov>=4.1.0",
    "pytest-dotenv>=0.5.2",
]
docs = [
    "mkdocs-material[imaging]>=9.4.8",
    "Pygments>=2.16.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.1",
    "mkdocs-autorefs>=0.5.0",
    "pymdown-extensions>=10.4",
    "mkdocs-open-in-new-tab>=1.0.3",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "PL", "ANN"]
ignore = ["PLR2004", "ANN101", "ANN401"]

[tool.pytest.ini_options]
env_files = ["test.env"]
testpaths = ["tests"]
addopts = "-W ignore::pytest.PytestCollectionWarning -v -n auto --cov-report=xml"
